Fixed unaligned icons with data text

--- a/vindvenn/src/components/VindvennApp/VindvennApp.css
+++ b/vindvenn/src/components/VindvennApp/VindvennApp.css
@@ -41,7 +41,7 @@
 }
 
 .weather-report-image {
-    margin: 20px;
+    margin: 29px;
     display: flex;
     justify-content: center;
 }
